src/test/ui/traits/test-2.stderr
error[E0107]: this associated function takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/test-2.rs:9:8
   |
LL |     10.dup::<i32>();
   |        ^^^------- help: remove these generics
   |        |
   |        expected 0 generic arguments
   |
note: associated function defined here, with 0 generic parameters
  --> $DIR/test-2.rs:4:16
   |
LL | trait bar { fn dup(&self) -> Self; fn blah<X>(&self); }
   |                ^^^

error[E0107]: this associated function takes 1 generic argument but 2 generic arguments were supplied
  --> $DIR/test-2.rs:11:8
   |
LL |     10.blah::<i32, i32>();
   |        ^^^^        --- help: remove this generic argument
   |        |
   |        expected 1 generic argument
   |
note: associated function defined here, with 1 generic parameter: `X`
  --> $DIR/test-2.rs:4:39
   |
LL | trait bar { fn dup(&self) -> Self; fn blah<X>(&self); }
   |                                       ^^^^ -

error[E0038]: the trait `bar` cannot be made into an object
  --> $DIR/test-2.rs:13:22
   |
LL |     (Box::new(10) as Box<dyn bar>).dup();
   |                      ^^^^^^^^^^^^ `bar` cannot be made into an object
   |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/test-2.rs:4:30
   |
LL | trait bar { fn dup(&self) -> Self; fn blah<X>(&self); }
   |       ---                    ^^^^     ^^^^ ...because method `blah` has generic type parameters
   |       |                      |
   |       |                      ...because method `dup` references the `Self` type in its return type
   |       this trait cannot be made into an object...
   = help: consider moving `dup` to another trait
   = help: consider moving `blah` to another trait

error[E0038]: the trait `bar` cannot be made into an object
  --> $DIR/test-2.rs:13:5
   |
LL |     (Box::new(10) as Box<dyn bar>).dup();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `bar` cannot be made into an object
   |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/test-2.rs:4:30
   |
LL | trait bar { fn dup(&self) -> Self; fn blah<X>(&self); }
   |       ---                    ^^^^     ^^^^ ...because method `blah` has generic type parameters
   |       |                      |
   |       |                      ...because method `dup` references the `Self` type in its return type
   |       this trait cannot be made into an object...
   = help: consider moving `dup` to another trait
   = help: consider moving `blah` to another trait

error[E0038]: the trait `bar` cannot be made into an object
  --> $DIR/test-2.rs:13:6
   |
LL |     (Box::new(10) as Box<dyn bar>).dup();
   |      ^^^^^^^^^^^^ `bar` cannot be made into an object
   |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/test-2.rs:4:30
   |
LL | trait bar { fn dup(&self) -> Self; fn blah<X>(&self); }
   |       ---                    ^^^^     ^^^^ ...because method `blah` has generic type parameters
   |       |                      |
   |       |                      ...because method `dup` references the `Self` type in its return type
   |       this trait cannot be made into an object...
   = help: consider moving `dup` to another trait
   = help: consider moving `blah` to another trait
   = note: required because of the requirements on the impl of `CoerceUnsized<Box<dyn bar>>` for `Box<{integer}>`
   = note: required by cast to type `Box<dyn bar>`

error[E0283]: type annotations needed
  --> $DIR/test-2.rs:9:8
   |
LL |     10.dup::<i32>();
   |        ^^^ cannot infer type for type `{integer}`
   |
note: multiple `impl`s satisfying `{integer}: bar` found
  --> $DIR/test-2.rs:5:1
   |
LL | impl bar for i32 { fn dup(&self) -> i32 { *self } fn blah<X>(&self) {} }
   | ^^^^^^^^^^^^^^^^
LL | impl bar for u32 { fn dup(&self) -> u32 { *self } fn blah<X>(&self) {} }
   | ^^^^^^^^^^^^^^^^

error[E0283]: type annotations needed
  --> $DIR/test-2.rs:11:8
   |
LL |     10.blah::<i32, i32>();
   |        ^^^^ cannot infer type for type `{integer}`
   |
note: multiple `impl`s satisfying `{integer}: bar` found
  --> $DIR/test-2.rs:5:1
   |
LL | impl bar for i32 { fn dup(&self) -> i32 { *self } fn blah<X>(&self) {} }
   | ^^^^^^^^^^^^^^^^
LL | impl bar for u32 { fn dup(&self) -> u32 { *self } fn blah<X>(&self) {} }
   | ^^^^^^^^^^^^^^^^

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0038, E0107, E0283.
For more information about an error, try `rustc --explain E0038`.
